--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+     "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -13,7 +14,7 @@
     "cors": "^2.8.5",
     "express": "^5.2.1",
     "mongoose": "^9.0.1",
-    "start": "node server.js"
+    
 
   }
 }
